# tesla-collector

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: CICD.yml  build-deploy.yaml  build.yaml  codeql-analysis.yml  main.yml  merge-pr.yaml  pre-checks.yml  weekly_build.yml
k8s/base/: kustomization.yaml  tesla-job-def.yaml
k8s/prod/: kustomization.yaml  namespace.yaml
src/: Dockerfile  build.sh  get_stats.py  requirements.txt  test-requirements.txt
